WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159032
Inline the last of the Apple Pay WebCore code
https://bugs.webkit.org/show_bug.cgi?id=159032
Summary
Inline the last of the Apple Pay WebCore code
Anders Carlsson
Reported
2016-06-22 12:17:55 PDT
Inline the last of the Apple Pay WebCore code
Attachments
Patch
(11.65 KB, patch)
2016-06-22 12:19 PDT
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(11.50 KB, patch)
2016-06-22 12:24 PDT
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(12.20 KB, patch)
2016-06-22 12:28 PDT
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(12.20 KB, patch)
2016-06-22 12:39 PDT
,
Anders Carlsson
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2016-06-22 12:19:52 PDT
Created
attachment 281857
[details]
Patch
WebKit Commit Bot
Comment 2
2016-06-22 12:21:09 PDT
Attachment 281857
[details]
did not pass style-queue: ERROR: Source/WebCore/loader/EmptyClients.cpp:57: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3
2016-06-22 12:24:00 PDT
Created
attachment 281858
[details]
Patch
WebKit Commit Bot
Comment 4
2016-06-22 12:25:39 PDT
Attachment 281858
[details]
did not pass style-queue: ERROR: Source/WebCore/loader/EmptyClients.cpp:60: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 5
2016-06-22 12:28:06 PDT
Created
attachment 281859
[details]
Patch
WebKit Commit Bot
Comment 6
2016-06-22 12:30:30 PDT
Attachment 281859
[details]
did not pass style-queue: ERROR: Source/WebCore/loader/EmptyClients.cpp:57: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 7
2016-06-22 12:39:10 PDT
Created
attachment 281862
[details]
Patch
WebKit Commit Bot
Comment 8
2016-06-22 12:42:17 PDT
Attachment 281862
[details]
did not pass style-queue: ERROR: Source/WebCore/loader/EmptyClients.cpp:57: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 9
2016-06-22 12:58:46 PDT
Comment on
attachment 281862
[details]
Patch rs=me
Anders Carlsson
Comment 10
2016-06-22 13:00:20 PDT
Committed
r202345
: <
http://trac.webkit.org/changeset/202345
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug