Inline the last of the Apple Pay WebCore code https://bugs.webkit.org/show_bug.cgi?id=159032

Reviewed by Tim Horton.

* loader/EmptyClients.cpp:
(WebCore::fillWithEmptyClients):
* page/MainFrame.cpp:
(WebCore::MainFrame::MainFrame):
* page/MainFrame.h:
* page/PageConfiguration.h:
* platform/cocoa/ThemeCocoa.mm:
(WebCore::passKitBundle):
(WebCore::loadPassKitPDFPage):
(WebCore::applePayButtonLogoBlack):
(WebCore::applePayButtonLogoWhite):
(WebCore::drawApplePayButton):
(WebCore::ThemeCocoa::drawNamedImage):

Canonical link: https://commits.webkit.org/177112@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202345 268f45cc-cd09-0410-ab3c-d52691b4dbfc