Source/WebCore/page/MainFrame.h
@@ -63,8 +63,8 @@ public:
     void removeLatchingStateForTarget(Element&);
 #endif // PLATFORM(MAC)
 
-#if USE(APPLE_INTERNAL_SDK)
-#include <WebKitAdditions/MainFrameMembers.h>
+#if ENABLE(APPLE_PAY)
+    PaymentCoordinator& paymentCoordinator() const { return *m_paymentCoordinator; }
 #endif
 
 private:
@@ -83,6 +83,10 @@ private:
 
     std::unique_ptr<WheelEventDeltaFilter> m_recentWheelEventDeltaFilter;
     std::unique_ptr<PageOverlayController> m_pageOverlayController;
+
+#if ENABLE(APPLE_PAY)
+    std::unique_ptr<PaymentCoordinator> m_paymentCoordinator;
+#endif
 };
 
 inline bool Frame::isMainFrame() const
